fixed flickering animations

--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ canvas {
     border: none;
     border-radius: 15px;
     cursor: pointer;
-    z-index: 50;
+    z-index: 65;
 }
 
 .controls {
